--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -54,6 +54,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Visao\Funcionario\FormFuncionarioCrud.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Funcionario\FormFuncionarioCrud.Designer.cs">
+      <DependentUpon>FormFuncionarioCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\Funcionario\FormFuncionarioListar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Funcionario\FormFuncionarioListar.Designer.cs">
+      <DependentUpon>FormFuncionarioListar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,7 +94,10 @@
   <ItemGroup>
     <Folder Include="Controlers\" />
     <Folder Include="Modelos\" />
-    <Folder Include="Visao\" />
+    <Folder Include="Visao\Cliente\" />
+    <Folder Include="Visao\Ocupa\" />
+    <Folder Include="Visao\Vaga\" />
+    <Folder Include="Visao\Veiculo\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
