--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -54,6 +54,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Visao\Cliente\FormClienteCrud.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Cliente\FormClienteCrud.Designer.cs">
+      <DependentUpon>FormClienteCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\Cliente\FormClienteListar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Cliente\FormClienteListar.Designer.cs">
+      <DependentUpon>FormClienteListar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Visao\Funcionario\FormFuncionarioCrud.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,7 +106,6 @@
   <ItemGroup>
     <Folder Include="Controlers\" />
     <Folder Include="Modelos\" />
-    <Folder Include="Visao\Cliente\" />
     <Folder Include="Visao\Ocupa\" />
     <Folder Include="Visao\Vaga\" />
     <Folder Include="Visao\Veiculo\" />
