--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -52,6 +52,7 @@
     <Compile Include="FormPrincipal.Designer.cs">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\ClienteModelo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Visao\Cliente\FormClienteCrud.cs">
@@ -90,6 +91,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Visao\Cliente\FormClienteCrud.resx">
+      <DependentUpon>FormClienteCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\Cliente\FormClienteListar.resx">
+      <DependentUpon>FormClienteListar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\Funcionario\FormFuncionarioListar.resx">
+      <DependentUpon>FormFuncionarioListar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -105,7 +115,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controlers\" />
-    <Folder Include="Modelos\" />
     <Folder Include="Visao\Ocupa\" />
     <Folder Include="Visao\Vaga\" />
     <Folder Include="Visao\Veiculo\" />
