--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Modelos\ClienteModelo.cs" />
     <Compile Include="Modelos\FuncionarioModelo.cs" />
+    <Compile Include="Modelos\OcupaModelo.cs" />
     <Compile Include="Modelos\VagaModelo.cs" />
     <Compile Include="Modelos\VeiculoModelo.cs" />
     <Compile Include="Program.cs" />
@@ -87,6 +88,12 @@
     </Compile>
     <Compile Include="Visao\Funcionario\FormFuncionarioRelatorio.Designer.cs">
       <DependentUpon>FormFuncionarioRelatorio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\Ocupa\FormOcupaFechamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Ocupa\FormOcupaFechamento.Designer.cs">
+      <DependentUpon>FormOcupaFechamento.cs</DependentUpon>
     </Compile>
     <Compile Include="Visao\Ocupa\FormOcupaCrud.cs">
       <SubType>Form</SubType>
@@ -135,6 +142,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Visao\Cliente\FormClienteCrud.resx">
       <DependentUpon>FormClienteCrud.cs</DependentUpon>
@@ -150,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Visao\Funcionario\FormFuncionarioRelatorio.resx">
       <DependentUpon>FormFuncionarioRelatorio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\Ocupa\FormOcupaFechamento.resx">
+      <DependentUpon>FormOcupaFechamento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Visao\Ocupa\FormOcupaCrud.resx">
       <DependentUpon>FormOcupaCrud.cs</DependentUpon>
@@ -184,6 +195,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controlers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\num1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\num1.red.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
