--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -146,6 +146,9 @@
     <Compile Include="Visao\Veiculo\FormVeiculoListar.Designer.cs">
       <DependentUpon>FormVeiculoListar.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FormLogin.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </EmbeddedResource>
