--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="DAO\Conexao.cs" />
     <Compile Include="DAO\FuncionarioDAO.cs" />
+    <Compile Include="DAO\OcupaDAO.cs" />
     <Compile Include="DAO\VagaDAO.cs" />
     <Compile Include="DAO\VeiculoDAO.cs" />
     <Compile Include="Interfaces\IConexao.cs" />
