Correção da connectionString

--- a/ControleEstacionamento/App.config
+++ b/ControleEstacionamento/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>  
-    <add name="DefaultConnection" connectionString="server=localhost;database=myDb;uid=myUser;password=myPass;" />
+    <add name="DefaultConnection" connectionString="server=localhost;database=estacionamento;uid=root;password=masterkey" />
   </connectionStrings>
 </configuration>
