--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -60,9 +60,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuracao.cs" />
+    <Compile Include="Controlers\FuncionarioController.cs" />
+    <Compile Include="Controlers\UsuarioController.cs" />
     <Compile Include="Controlers\ClienteController.cs" />
     <Compile Include="Controlers\OcupaController.cs" />
     <Compile Include="Controlers\VeiculoControler.cs" />
+    <Compile Include="DAO\UsuarioDAO.cs" />
     <Compile Include="DAO\ClienteDAO.cs" />
     <Compile Include="DAO\Conexao.cs" />
     <Compile Include="DAO\FuncionarioDAO.cs" />
@@ -86,10 +90,23 @@
     <Compile Include="Modelos\ClienteModelo.cs" />
     <Compile Include="Modelos\FuncionarioModelo.cs" />
     <Compile Include="Modelos\OcupaModelo.cs" />
+    <Compile Include="Modelos\UsuarioModelo.cs" />
     <Compile Include="Modelos\VagaModelo.cs" />
     <Compile Include="Modelos\VeiculoModelo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relatorio\FormRelatorioFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relatorio\FormRelatorioFuncionario.Designer.cs">
+      <DependentUpon>FormRelatorioFuncionario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Relatorio\FormRelatorioCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relatorio\FormRelatorioCliente.Designer.cs">
+      <DependentUpon>FormRelatorioCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Relatorio\FormRelatorioVeiculoAvancado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +132,18 @@
       <DependentUpon>rptVeiculosAvancado.rpt</DependentUpon>
       <SubType>Component</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Visao\Admin\Usuario\FormUsuarioCrud.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Admin\Usuario\FormUsuarioCrud.Designer.cs">
+      <DependentUpon>FormUsuarioCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\Admin\Usuario\FormUsuarioListar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Admin\Usuario\FormUsuarioListar.Designer.cs">
+      <DependentUpon>FormUsuarioListar.cs</DependentUpon>
     </Compile>
     <Compile Include="Visao\Cliente\FormClienteCrud.cs">
       <SubType>Form</SubType>
@@ -204,8 +233,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Relatorio\FormRelatorioFuncionario.resx">
+      <DependentUpon>FormRelatorioFuncionario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Relatorio\FormRelatorioVeiculo.resx">
       <DependentUpon>FormRelatorioVeiculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Relatorio\FormRelatorioCliente.resx">
+      <DependentUpon>FormRelatorioCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Relatorio\FormRelatorioVeiculoAvancado.resx">
       <DependentUpon>FormRelatorioVeiculoAvancado.cs</DependentUpon>
@@ -219,6 +254,12 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>rptVeiculosAvancado.cs</LastGenOutput>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\Admin\Usuario\FormUsuarioCrud.resx">
+      <DependentUpon>FormUsuarioCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\Admin\Usuario\FormUsuarioListar.resx">
+      <DependentUpon>FormUsuarioListar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Visao\Cliente\FormClienteCrud.resx">
       <DependentUpon>FormClienteCrud.cs</DependentUpon>
@@ -279,7 +320,7 @@
     <None Include="Resources\num1.red.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Modelos\CriacaoBanco.txt" />
+    <Content Include="AlteracoesBD\CriacaoBanco.txt" />
     <None Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
