--- a/ControleEstacionamento/ControleEstacionamento.csproj
+++ b/ControleEstacionamento/ControleEstacionamento.csproj
@@ -64,7 +64,6 @@
     <Compile Include="Controlers\FuncionarioController.cs" />
     <Compile Include="Controlers\UsuarioController.cs" />
     <Compile Include="Controlers\ClienteController.cs" />
-    <Compile Include="Controlers\FuncionarioControler.cs" />
     <Compile Include="Controlers\OcupaController.cs" />
     <Compile Include="Controlers\VagaControler.cs" />
     <Compile Include="Controlers\VeiculoControler.cs" />
@@ -183,17 +182,17 @@
     <Compile Include="Visao\Funcionario\FormFuncionarioRelatorio.Designer.cs">
       <DependentUpon>FormFuncionarioRelatorio.cs</DependentUpon>
     </Compile>
+    <Compile Include="Visao\Ocupa\FormOcupaLancamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\Ocupa\FormOcupaLancamento.Designer.cs">
+      <DependentUpon>FormOcupaLancamento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Visao\Ocupa\FormOcupaFechamento.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Visao\Ocupa\FormOcupaFechamento.Designer.cs">
       <DependentUpon>FormOcupaFechamento.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Visao\Ocupa\FormOcupaCrud.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Visao\Ocupa\FormOcupaCrud.Designer.cs">
-      <DependentUpon>FormOcupaCrud.cs</DependentUpon>
     </Compile>
     <Compile Include="Visao\Ocupa\FormOcupaListar.cs">
       <SubType>Form</SubType>
@@ -287,11 +286,11 @@
     <EmbeddedResource Include="Visao\Funcionario\FormFuncionarioRelatorio.resx">
       <DependentUpon>FormFuncionarioRelatorio.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Visao\Ocupa\FormOcupaLancamento.resx">
+      <DependentUpon>FormOcupaLancamento.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Visao\Ocupa\FormOcupaFechamento.resx">
       <DependentUpon>FormOcupaFechamento.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Visao\Ocupa\FormOcupaCrud.resx">
-      <DependentUpon>FormOcupaCrud.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Visao\Ocupa\FormOcupaListar.resx">
       <DependentUpon>FormOcupaListar.cs</DependentUpon>
